Trying to correct navbar link layout. Finally in rows but text wrap is on and can't remove

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -114,6 +114,7 @@ footer{
   margin-left: 10%;
   margin-right: 10%;
   background-color: #461D7C;
+  flex-direction: row;
 }
 
 .nav-link, .nav-item {
